--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +11,12 @@
 </head>
 <body>
     <div id="main">
-        <div></div>
-        <button id="start-el">Start</button>
-        <ol id="status-el"></ol>
+        <button id="start-btn">Start</button>
+        <ul id="status-el"></ul>
+
+        <div id="record-el">
+            <p>test purposes</p>
+        </div>
     </div>
 
     <script src="./js/index.js"></script>
